#    GNU Affero General Public License for more ietails.
#
#    You should have received a copy of the GNU Affero General Public
#    License along with this program.  If not, see:
#    <http://www.gnu.org/licenses/agpl.html>.
#
#######################################################################


2014-07-03  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999936 released.

        * Updated Makefile.PL for AWS Ubuntu installations.


2014-07-03  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999935 released.

        * Updated Makefile.PL for AWS Ubuntu installations.

        * Updated License notices to include acknowledgements
          for Crypt::DES and Net::SSLeay moldule authors.


2014-07-03  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999934 released.

        * Updated Makefile.PL for AWS Ubuntu installations.


2014-07-03  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999933 released.

        * Updated Makefile.PL for AWS Ubuntu installations.


2014-07-03  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999932 released.

        * Updated Makefile.PL for AWS Ubuntu installations.


2014-07-01  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999931 released.

        * Fixed logout of localhost handle.


2014-07-01  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999930 released.

        * Updated Makefile.PL for AWS Ubuntu installations.

        * Fixed untar for Berkeley DB.


2014-06-30  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999929 released.

        * Updated Makefile.PL for AWS Ubuntu installations.

        * Fixed exec for AWS Micro Server.


2014-06-30  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999928 released.
