@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 8ae2affc5f77f4eede370c014d3c8afba68a0e1a ChangeLog
+SHA1 40c026e28efb986dc422e7d4c5c6c8e3354fb498 ChangeLog
 SHA1 62647027745e394450492878f8d8730548d83fa2 LICENSE
 SHA1 2405b691fcb18b468ccb31cab97babb75e4d1f30 MANIFEST
-SHA1 405678b6a566a6ce62d65472d8b369c59829d2f8 META.yml
-SHA1 233fc62d83bffffec6dede438dae6ba0fb3b9178 Makefile.PL
+SHA1 62bc26b71ce20d9bbc6406a67f1f56d871b1c3c7 META.yml
+SHA1 983dca5e1d7887256b98864b60c82810e044ef4e Makefile.PL
 SHA1 05aead0f26b0f71a00bad5badbf390f2c92dcd1d README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 aa152c829fcf86957fd2012f6c30e5e18d3c76b2 bin/fullauto.pl
@@ -47,7 +47,7 @@ SHA1 6fed559b971e9d2f091e0776ddbb131be5225a36 inc/Module/Install/Win32.pm
 SHA1 ea528c813c3473a2674fcbed06531c2f795116ce inc/Module/Install/WriteAll.pm
 SHA1 00bb8470354d11bd7c2c74633083ebe627eb2b7e inc/Module/Install/with.pm
 SHA1 e1d3650b6801a3cb2e6de38574e9327914c96d40 install_mozrepl_plugin.ahk
-SHA1 560a823288b563e3f0633b4dfeed6dbf9b0ab006 lib/Net/FullAuto.pm
+SHA1 52159f2d20e9d9fff620284d69f8e829e8209c0b lib/Net/FullAuto.pm
 SHA1 cc3f8588c96516de2802c68be465447d17f781aa lib/Net/FullAuto/Custom/BackUp/README
 SHA1 5032ba28f88dbf163b0d4dd158948af9124568c9 lib/Net/FullAuto/Custom/README
 SHA1 5b1702f20efb104e3375934cf55a7438c19e109a lib/Net/FullAuto/Distro/fa_code.pm
@@ -64,11 +64,11 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJTtbJSAAoJEBa/9Pad787Eu2QH/iQ3m5NfldBKy/pR+dFeEYb+
-L5aNzINb2xhuE7T1FkefDpfWCdXVgafbFrz4B8D8JTyAAFc6exiBxTzaaiHjlBcA
-kEUHovmZ0+qT6YcfXcqKtCith5DgGWBquH6lfEnA7v3KAI2eTbg34zAhdejMXQaF
-wyn/zsvrAVy+HbklPKuIqFpCFiykhNsrUaKQRM3lNcb0JpqJw4F7sdMDjbDa2J/Z
-xNLeASkX6rffZC9OIlNFdEuJ/s11i2bN+PeviKa1sFX4MGZrPI7IAXFaBtuM22uV
-Uu2uvIkkRxy4bOuIAObyiqZrNBrEj517nA50bKwNr85VpuKullnn0EGiCBvKhNE=
-=+FBI
+iQEcBAEBAgAGBQJTtbpNAAoJEBa/9Pad787EDBwH/RwjCqRBkovzHDj22gTpUKMx
+M6XvkSIjg9K6yR4PubIt2BwycoO8NIamnalu+7YSmXxG6WXPahDCkeyq7dt0fqXq
+9AAeRgfXZO5kBt3/NKCgTticLNoVyhXHjwHS6K2NfBK/yth8AZhzMTyk3Ck5nFWm
+LmD6MHXdbjSt+ECm3m2VCQ6fZVSFdDMZexV95RFPcacZ2E2kxAW1gKYyGKRKiDf/
+54TE9CXqGVd8FJKilgg/HzomRmwalyS86AO7GsrxuqMuyXcf1FDqkt2QX6abhwJ8
+K47WMgQA3LFFtLPa9BG0zjXRcVCoT5C3uYBTbteTZqUFKWE6MfmTOHUH1XIqn44=
+=utP2
 -----END PGP SIGNATURE-----
