@@ -22,7 +22,7 @@ package Net::FullAuto;
 #######################################################################
 
 
-our $VERSION='0.9999999936';
+our $VERSION='0.9999999937';
 
 
 use 5.005;
